# BeamSuntory

./: .dockerignore  .gitignore  .prettierrc.json  BusinessLogic  Dockerfile  README.md  TODO.md  config.py  docker-compose.campari.yml  docker-compose.prod.yml  docker-compose.proximo.yml  docker-compose.staging.yml  docker-compose.yml  docker-compose.yml.prod  package.json  project.env  pyproject.toml  sku_des.xlsx  sku_names.xlsx  start_server.sh  stores.xlsx  tailwind.config.js  tsconfig.json  version  webpack.config.js
app/: __init__.py  celery.py  constants.py  worker.py
src/: adjust.ts  assign.ts  base.ts  bell.ts  billable_group.ts  cart.ts  delivery_agent.ts  division.ts  event.ts  group.ts  group_for_product.ts  htmx.ts  inbound_order.ts  inbound_order_billable_groups_add.ts  incoming_stock.ts  inventory.ts  master_billable_group.ts  master_group.ts  master_group_for_product.ts  outgoing_stock.ts  outgoing_stock_billable_groups_add.ts  pickup_inbound.ts  pickup_order.ts  product.ts  product_event.ts  report.ts  report_adjustment.ts  report_assign.ts  report_event.ts  report_inbound_orders.ts  report_inventory.ts  report_share_request.ts  report_shelf_life.ts  report_shipping.ts  report_sku.ts  report_sub_group.ts  request_share.ts  ship_request.ts  store.ts  store_category.ts  (+7 more)
tests/: conftest.py  test_adjustment.py  test_auth.py  test_billable_group.py  test_bulk_ship.py  test_cart.py  test_delivery_agent.py  test_devision.py  test_email.py  test_event.py  test_groups.py  test_inbound_order.py  test_incoming_stock.py  test_incoming_stock_notification.py  (+16 more)
(+757 files in other folders)
